fixed nav menu alignment

--- a/style.css
+++ b/style.css
@@ -179,7 +179,7 @@ a:hover {
 
 #nav-contact {
     margin-left: 380px;
-    bottom: 10px;
+    bottom: 2px;
 }
 
 #nav-home {
